1. window height and width added to config + get functions. 2. search_friends_window + listeners added. 3. verifier class which validates inputs.

--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -9,7 +9,7 @@ Host=localhost
 Port=3306
 DbName=DbMysql05
 UserName=root
-Password=Aa1234567
+Password=lion123
 NumOfConnections=2
 YAGO_TYPES_FILE = "yagoSimpleTypes.ttl"
 YAGO_FACTS_FILE = "yagoFacts.ttl"
@@ -27,3 +27,5 @@ PREFERRED_MEAN = "skos:prefLabel"
 MOVIE_ID = "106613686"
 ACTOR_ID = "109765278"
 DIRECTOR_ID = "110088200"
+WINDOW_WIDTH = 640
+WINDOW_HEIGHT = 480
