parsers, entities, configurations

--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -1,31 +1,30 @@
-YagoSimpleTypesFilePath=C:\Users\GUY\workspace\db2014\YAGOfiles\yagoSimpleTypes.ttl
-YagoFactsFilePath=C:\Users\GUY\workspace\db2014\YAGOfiles\yagoFacts.ttl
-YagoLiteralFactsFilePath=C:\Users\GUY\workspace\db2014\YAGOfiles\yagoLiteralFacts.ttl
-YagoWikipediaInfoFilePath=C:\Users\GUY\workspace\db2014\YAGOfiles\yagoWikipediaInfo.ttl
-IMDBgenreListFilePath=C:\Users\GUY\workspace\db2014\genres.list
-IMDBplotListFilePath=C:\Users\GUY\workspace\db2014\plot.list
-IMDBlanguageFilePat=C:\Users\GUY\workspace\db2014\language.list	 
+YagoSimpleTypesFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoSimpleTypes.tsv
+YagoFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoFacts.tsv
+YagoLiteralFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoLiteralFacts.tsv
+YagoWikipediaInfoFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoWikipediaInfo.tsv
+IMDBgenreListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\genres.list
+IMDBplotListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\plot.list
+IMDBlanguageFilePat=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\language.list
 Host=localhost
 Port=3306
 DbName=DbMysql05
 UserName=root
 Password=lion123
 NumOfConnections=2
-YAGO_TYPES_FILE = "yagoSimpleTypes.ttl"
-YAGO_FACTS_FILE = "yagoFacts.ttl"
-YAGO_LITERAL_FACTS_FILE = "yagoLiteralFacts.ttl"
-YAGO_WIKIPEDIA_FILE = "yagoWikipediaInfo.ttl"
-ACTED_IN = "actedIn"
-DIRECTED = "directed"
-CREATED_ON = "wasCreatedOnDate"
-DURATION = "hasDuration"
-LABEL = "rdfs:label"
-FAMILY_NAME = "hasFamilyName"
-FIRST_NAME = "hasGivenName"
-WIKI = "hasWikipediaUrl"
-PREFERRED_MEAN = "skos:prefLabel"
-MOVIE_ID = "106613686"
-ACTOR_ID = "109765278"
-DIRECTOR_ID = "110088200"
-WINDOW_WIDTH = 640
-WINDOW_HEIGHT = 480
+YAGO_TYPES_FILE = yagoSimpleTypes.ttl
+YAGO_FACTS_FILE = yagoFacts.ttl
+YAGO_LITERAL_FACTS_FILE = yagoLiteralFacts.ttl
+YAGO_WIKIPEDIA_FILE = yagoWikipediaInfo.ttl
+ACTED_IN = actedIn
+DIRECTED = directed
+YAGO_LITERAL_YEAR = wasCreatedOnDate
+YAGO_LITERAL_LENGTH = hasDuration
+LABEL = rdfs:label
+FAMILY_NAME = hasFamilyName
+FIRST_NAME = hasGivenName
+YAGO_WIKI_TAG = hasWikipediaUrl
+PREFERRED_MEAN = skos:prefLabel
+YAGO_TYPES_MOVIE = 106613686
+YAGO_TYPES_ACTOR = 109765278
+YAGO_TYPES_DIRECTOR = 110088200
+IMDB_KEYWORD_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\keywords.list
