--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -28,3 +28,4 @@ YAGO_TYPES_MOVIE = 106613686
 YAGO_TYPES_ACTOR = 109765278
 YAGO_TYPES_DIRECTOR = 110088200
 IMDB_KEYWORD_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\keywords.list
+IMDB_DIRECTOR_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\directors.list
