--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -9,7 +9,7 @@ Host=localhost
 Port=3306
 DbName=DbMysql05
 UserName=root
-Password=lion123
+Password=Aa1234567
 NumOfConnections=2
 YAGO_TYPES_FILE = yagoSimpleTypes.ttl
 YAGO_FACTS_FILE = yagoFacts.ttl
@@ -29,3 +29,6 @@ YAGO_TYPES_ACTOR = 109765278
 YAGO_TYPES_DIRECTOR = 110088200
 IMDB_KEYWORD_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\keywords.list
 IMDB_DIRECTOR_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\directors.list
+DEFAULT_ACTIVITY_LIMIT=5
+WINDOW_HEIGHT=480
+WINDOW_WIDTH=640
