--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -1,10 +1,10 @@
-YagoSimpleTypesFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoSimpleTypes.tsv
-YagoFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoFacts.tsv
-YagoLiteralFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoLiteralFacts.tsv
-YagoWikipediaInfoFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\YAGOfiles\\yagoWikipediaInfo.tsv
-IMDBgenreListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\genres.list
-IMDBplotListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\plot.list
-IMDBlanguageFilePat=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\language.list
+YagoSimpleTypesFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoSimpleTypes.tsv
+YagoFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoFacts.tsv
+YagoLiteralFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoLiteralFacts.tsv
+YagoWikipediaInfoFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoWikipediaInfo.tsv
+IMDBgenreListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\genres.list
+IMDBplotListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\plot.list
+IMDBlanguageFilePat=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\language.list
 Host=localhost
 Port=3306
 DbName=DbMysql05
@@ -27,8 +27,8 @@ PREFERRED_MEAN = skos:prefLabel
 YAGO_TYPES_MOVIE = 106613686
 YAGO_TYPES_ACTOR = 109765278
 YAGO_TYPES_DIRECTOR = 110088200
-IMDB_KEYWORD_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\keywords.list
-IMDB_DIRECTOR_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\IMDBfiles\\directors.list
+IMDB_KEYWORD_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\keywords.list
+IMDB_DIRECTOR_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\directors.list
 DEFAULT_ACTIVITY_LIMIT=5
 WINDOW_HEIGHT=480
 WINDOW_WIDTH=640
