--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -2,6 +2,7 @@ YagoSimpleTypesFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\
 YagoFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoFacts.tsv
 YagoLiteralFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoLiteralFacts.tsv
 YagoWikipediaInfoFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoWikipediaInfo.tsv
+YagoMultilingualInfoFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\YAGOfiles\\yagoMultilingualInstanceLabels.tsv
 IMDBgenreListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\genres.list
 IMDBplotListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\plot.list
 IMDBlanguageFilePat=C:\\Users\\GUY\\workspace\\db2014_parser_new\\IMDBfiles\\language.list
@@ -17,6 +18,7 @@ YAGO_LITERAL_FACTS_FILE = yagoLiteralFacts.ttl
 YAGO_WIKIPEDIA_FILE = yagoWikipediaInfo.ttl
 ACTED_IN = actedIn
 DIRECTED = directed
+CREATED = created
 YAGO_LITERAL_YEAR = wasCreatedOnDate
 YAGO_LITERAL_LENGTH = hasDuration
 LABEL = rdfs:label
