Pretty stable version
Create the DB
Run guy's "parser tester"
then the program

--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -1,13 +1,13 @@
-YagoSimpleTypesFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\yagoSimpleTypes.tsv
-YagoFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\yagoFacts.tsv
-YagoLiteralFactsFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\yagoLiteralFacts.tsv
-YagoWikipediaInfoFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\yagoWikipediaInfo.tsv
-YagoMultilingualInfoFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\yagoMultilingualInstanceLabels.tsv
-IMDBgenreListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\genres.list
-IMDBplotListFilePath=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\plot.list
-IMDBlanguageFilePat=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\language.list
-IMDB_KEYWORD_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\keywords.list
-IMDB_DIRECTOR_FILE_PATH=C:\\Users\\GUY\\workspace\\db2014_parser\\DataFiles\\directors.list
+YagoSimpleTypesFilePath=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\yagoSimpleTypes.tsv
+YagoFactsFilePath=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\yagoFacts.tsv
+YagoLiteralFactsFilePath=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\yagoLiteralFacts.tsv
+YagoWikipediaInfoFilePath=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\yagoWikipediaInfo.tsv
+YagoMultilingualInfoFilePath=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\yagoMultilingualInstanceLabels.tsv
+IMDBgenreListFilePath=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\genres.list
+IMDBplotListFilePath=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\plot.list
+IMDBlanguageFilePat=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\language.list
+IMDB_KEYWORD_FILE_PATH=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\keywords.list
+IMDB_DIRECTOR_FILE_PATH=C:\\Users\\MATAN\\workspace\\db2014_parser\\DataFiles\\directors.list
 Host=localhost
 Port=3306
 DbName=Dione
