--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -31,6 +31,7 @@ PREFERRED_MEAN = skos:prefLabel
 YAGO_TYPES_MOVIE = 106613686
 YAGO_TYPES_ACTOR = 109765278
 YAGO_TYPES_DIRECTOR = 110088200
-DEFAULT_ACTIVITY_LIMIT=5
+DEFAULT_BIG_LIMIT=50
+DEFAULT_SMALL_LIMIT=5
 WINDOW_HEIGHT=480
 WINDOW_WIDTH=640
