--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -1,4 +1,4 @@
-YagoSimpleTypesFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoSimpleTypes\\workspace\\db2014_parser\\DataFiles\\yagoSimpleTypes.tsv
+YagoSimpleTypesFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoSimpleTypes.tsv
 YagoFactsFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoFacts.tsv
 YagoLiteralFactsFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoLiteralFacts.tsv
 YagoWikipediaInfoFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoWikipediaInfo.tsv
@@ -8,6 +8,9 @@ IMDBplotListFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\pl
 IMDBlanguageFilePat=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\language.list
 IMDB_KEYWORD_FILE_PATH=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\keywords.list
 IMDB_DIRECTOR_FILE_PATH=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\directors.list
+IMDBnamesListFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\aka-titles.list
+IMDBtaglineFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\taglines.list
+ADMIN_USERNAME=1
 Host=localhost
 Port=3306
 DbName=Dione
