--- a/db2014_parser/src/config.properties
+++ b/db2014_parser/src/config.properties
@@ -1,21 +1,21 @@
-YagoSimpleTypesFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoSimpleTypes.tsv
-YagoFactsFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoFacts.tsv
-YagoLiteralFactsFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoLiteralFacts.tsv
-YagoWikipediaInfoFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoWikipediaInfo.tsv
-YagoMultilingualInfoFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\yagoMultilingualInstanceLabels.tsv
-IMDBgenreListFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\genres.list
-IMDBplotListFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\plot.list
-IMDBlanguageFilePat=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\language.list
-IMDB_KEYWORD_FILE_PATH=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\keywords.list
-IMDB_DIRECTOR_FILE_PATH=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\directors.list
-IMDBnamesListFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\aka-titles.list
-IMDBtaglineFilePath=C:\\Users\\Guy\\workspace\\db2014_parser_new\\DataFiles\\taglines.list
+YagoSimpleTypesFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\yagoSimpleTypes.tsv
+YagoFactsFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\yagoFacts.tsv
+YagoLiteralFactsFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\yagoLiteralFacts.tsv
+YagoWikipediaInfoFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\yagoWikipediaInfo.tsv
+YagoMultilingualInfoFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\yagoMultilingualInstanceLabels.tsv
+IMDBgenreListFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\genres.list
+IMDBplotListFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\plot.list
+IMDBlanguageFilePat=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\language.list
+IMDB_KEYWORD_FILE_PATH=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\keywords.list
+IMDB_DIRECTOR_FILE_PATH=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\directors.list
+IMDBnamesListFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\aka-titles.list
+IMDBtaglineFilePath=C:\\Users\\SHAHAR\\Java Projects\\HelloWorld\\DataFiles\\taglines.list
 ADMIN_USERNAME=1
 Host=localhost
 Port=3306
 DbName=Dione
 UserName=root
-Password=Aa1234567
+Password=4444
 NumOfConnections=2
 ACTED_IN = actedIn
 DIRECTED = directed
@@ -32,3 +32,10 @@ DEFAULT_BIG_LIMIT=50
 DEFAULT_SMALL_LIMIT=5
 WINDOW_HEIGHT=480
 WINDOW_WIDTH=640
+ImagePath_blue_640_480= .\\src\\dione\\ui\\images\\blue_640_480_3.jpg
+ImagePath_blue_400_300= .\\src\\dione\\ui\\images\\blue_400_300.jpg
+ImagePath_blue_740_480= .\\src\\dione\\ui\\images\\blue_740_480.jpg
+ImagePath_blue_300= .\\src\\dione\\ui\\images\\blue_300.jpg
+IconPath16 = .\\src\\dione\\ui\\images\\icon16.jpg
+IconPath32 = .\\src\\dione\\ui\\images\\icon32.jpg
+IconPath48= .\\src\\dione\\ui\\images\\icon48.jpg
